fix: default alignment for h2

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -178,7 +178,6 @@ body {
       }
 
       h2 {
-        text-align: center;
         font-family: "Raleway", sans-serif;
         margin: 15px;
       }
